# diarios

./: cli.py  pyproject.toml
newspapers/: implementations.py  newspaper.py
tests/: test_newspapers.py
